--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "busboy": "^1.6.0",
+    "cors": "^2.8.5",
     "element-plus": "^2.9.9",
+    "express": "^5.1.0",
+    "formidable": "^3.5.4",
+    "multer": "^2.0.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
@@ -34,6 +39,7 @@
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "mockjs": "^1.1.0",
+    "nodemon": "^3.1.10",
     "prettier": "3.5.3",
     "sass": "^1.87.0",
     "unplugin-auto-import": "^19.1.2",
